--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -1,12 +1,12 @@
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
- * Copyright 2011-2016 Twitter, Inc.
+ * Copyright 2011-2017 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=b71df833a6d85ba848f52dcedc926537)
- * Config saved to config.json and https://gist.github.com/b71df833a6d85ba848f52dcedc926537
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=58715523cb35365bb64244c98bd417eb)
+ * Config saved to config.json and https://gist.github.com/58715523cb35365bb64244c98bd417eb
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -1103,12 +1103,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #810e15;
+  color: #bb9933;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #3c070a;
+  color: #7f6823;
   text-decoration: underline;
 }
 a:focus {
@@ -1343,11 +1343,11 @@ mark,
   color: #bbbbbb;
 }
 .text-primary {
-  color: #810e15;
+  color: #bb9933;
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #53090e;
+  color: #937828;
 }
 .text-success {
   color: #3c763d;
@@ -1379,11 +1379,11 @@ a.text-danger:focus {
 }
 .bg-primary {
   color: #fff;
-  background-color: #810e15;
+  background-color: #bb9933;
 }
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #53090e;
+  background-color: #937828;
 }
 .bg-success {
   background-color: #dff0d8;
@@ -3039,7 +3039,7 @@ select[multiple].input-lg {
 .btn:hover,
 .btn:focus,
 .btn.focus {
-  color: #444444;
+  color: #333333;
   text-decoration: none;
 }
 .btn:active,
@@ -3063,27 +3063,27 @@ fieldset[disabled] a.btn {
   pointer-events: none;
 }
 .btn-default {
-  color: #444444;
+  color: #333333;
   background-color: #dddddd;
-  border-color: #d0d0d0;
+  border-color: #cccccc;
 }
 .btn-default:focus,
 .btn-default.focus {
-  color: #444444;
+  color: #333333;
   background-color: #c4c4c4;
-  border-color: #919191;
+  border-color: #8c8c8c;
 }
 .btn-default:hover {
-  color: #444444;
+  color: #333333;
   background-color: #c4c4c4;
-  border-color: #b2b2b2;
+  border-color: #adadad;
 }
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  color: #444444;
+  color: #333333;
   background-color: #c4c4c4;
-  border-color: #b2b2b2;
+  border-color: #adadad;
 }
 .btn-default:active:hover,
 .btn-default.active:hover,
@@ -3094,9 +3094,9 @@ fieldset[disabled] a.btn {
 .btn-default:active.focus,
 .btn-default.active.focus,
 .open > .dropdown-toggle.btn-default.focus {
-  color: #444444;
+  color: #333333;
   background-color: #b2b2b2;
-  border-color: #919191;
+  border-color: #8c8c8c;
 }
 .btn-default:active,
 .btn-default.active,
@@ -3113,34 +3113,34 @@ fieldset[disabled] .btn-default:focus,
 .btn-default[disabled].focus,
 fieldset[disabled] .btn-default.focus {
   background-color: #dddddd;
-  border-color: #d0d0d0;
+  border-color: #cccccc;
 }
 .btn-default .badge {
   color: #dddddd;
-  background-color: #444444;
+  background-color: #333333;
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #810e15;
-  border-color: #6a0c11;
+  background-color: #bb9933;
+  border-color: #a7892e;
 }
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff;
-  background-color: #53090e;
-  border-color: #000000;
+  background-color: #937828;
+  border-color: #433712;
 }
 .btn-primary:hover {
   color: #ffffff;
-  background-color: #53090e;
-  border-color: #330608;
+  background-color: #937828;
+  border-color: #776120;
 }
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #53090e;
-  border-color: #330608;
+  background-color: #937828;
+  border-color: #776120;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
@@ -3152,8 +3152,8 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
   color: #ffffff;
-  background-color: #330608;
-  border-color: #000000;
+  background-color: #776120;
+  border-color: #433712;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -3169,11 +3169,11 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #810e15;
-  border-color: #6a0c11;
+  background-color: #bb9933;
+  border-color: #a7892e;
 }
 .btn-primary .badge {
-  color: #810e15;
+  color: #bb9933;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3405,7 +3405,7 @@ fieldset[disabled] .btn-danger.focus {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #810e15;
+  color: #bb9933;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3426,7 +3426,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #3c070a;
+  color: #7f6823;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3576,7 +3576,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #810e15;
+  background-color: #bb9933;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -4010,7 +4010,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #ffffff;
-  border-color: #810e15;
+  border-color: #bb9933;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4103,7 +4103,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #810e15;
+  background-color: #bb9933;
 }
 .nav-stacked > li {
   float: none;
@@ -4730,7 +4730,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.42857143;
   text-decoration: none;
-  color: #810e15;
+  color: #bb9933;
   background-color: #ffffff;
   border: 1px solid #dddddd;
   margin-left: -1px;
@@ -4751,7 +4751,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > a:focus,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #3c070a;
+  color: #7f6823;
   background-color: #ffffff;
   border-color: #dddddd;
 }
@@ -4763,8 +4763,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 3;
   color: #ffffff;
-  background-color: #810e15;
-  border-color: #810e15;
+  background-color: #bb9933;
+  border-color: #bb9933;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -4881,11 +4881,11 @@ a.label:focus {
   background-color: #a2a2a2;
 }
 .label-primary {
-  background-color: #810e15;
+  background-color: #bb9933;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #53090e;
+  background-color: #937828;
 }
 .label-success {
   background-color: #5cb85c;
@@ -4949,7 +4949,7 @@ a.badge:focus {
 }
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #810e15;
+  color: #bb9933;
   background-color: #ffffff;
 }
 .list-group-item > .badge {
@@ -5024,7 +5024,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #810e15;
+  border-color: #bb9933;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -5146,7 +5146,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #810e15;
+  background-color: #bb9933;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5310,8 +5310,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #810e15;
-  border-color: #810e15;
+  background-color: #bb9933;
+  border-color: #bb9933;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5327,7 +5327,7 @@ button.list-group-item {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #ef6c74;
+  color: #f0e7ca;
 }
 .list-group-item-success {
   color: #3c763d;
@@ -5707,22 +5707,22 @@ button.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: #810e15;
+  border-color: #bb9933;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #810e15;
-  border-color: #810e15;
+  background-color: #bb9933;
+  border-color: #bb9933;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #810e15;
+  border-top-color: #bb9933;
 }
 .panel-primary > .panel-heading .badge {
-  color: #810e15;
+  color: #bb9933;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #810e15;
+  border-bottom-color: #bb9933;
 }
 .panel-success {
   border-color: #d6e9c6;
